--- a/sbootdemo/src/main/resources/application.properties
+++ b/sbootdemo/src/main/resources/application.properties
@@ -1,10 +1,11 @@
+# server
+server.port=8090
 #datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/localweb
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.database=mysql
-
 #MyBatis扫描
 mybatis.mapper-locations=classpath*:mapper/*.xml
 #起别名。可省略写mybatis的xml中的resultType的全路径
