--- a/tooltest/pom.xml
+++ b/tooltest/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>jcifs</artifactId>
             <version>1.2.19</version>
         </dependency>
+        <dependency>
+            <groupId>com.hierynomus</groupId>
+            <artifactId>smbj</artifactId>
+            <version>0.10.0</version>
+        </dependency>
 
         <dependency>
             <groupId>log4j</groupId>
