--- a/tooltest/pom.xml
+++ b/tooltest/pom.xml
@@ -81,6 +81,13 @@
             <version>2.11.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.12</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
