--- a/tooltest/pom.xml
+++ b/tooltest/pom.xml
@@ -87,6 +87,12 @@
             <version>4.5.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>2.8.4</version>
+        </dependency>
+
 
     </dependencies>
 
