--- a/springbootdemo/pom.xml
+++ b/springbootdemo/pom.xml
@@ -7,6 +7,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.5.RELEASE</version>
+        <relativePath/>
     </parent>
     <groupId>com.example</groupId>
     <artifactId>springbootdemo</artifactId>
@@ -29,19 +30,10 @@
         </dependency>
 
 
-
     </dependencies>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <executable>true</executable>
-                    <includeSystemScope>true</includeSystemScope>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
