--- a/learndemo/pom.xml
+++ b/learndemo/pom.xml
@@ -22,7 +22,11 @@
     <artifactId>learndemo</artifactId>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
