--- a/tooltest/pom.xml
+++ b/tooltest/pom.xml
@@ -91,6 +91,11 @@
             <version>2.8.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
