--- a/tooltest/pom.xml
+++ b/tooltest/pom.xml
@@ -63,11 +63,11 @@
         </dependency>
 
         <!-- xml -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.jdom</groupId>
             <artifactId>jdom</artifactId>
             <version>1.1.3</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
